...
    override val browseManageRepositories = "Manage Repositories"
    override val browseRefresh = "Refresh"
    override val browseInstall = "Install"
    override val browseUninstall = "Uninstall"
    override val browseInstalledBadge = "Installed"
    override val browseSearchPlaceholder = "Search sources or extensions"
    override val browseNetworkDomainsHeader = "Declared Network Domains:"
    override val browseGlobalSearch = "Global Search"
    override val browseInstallFromFile = "Install .mext"
    override val browseUpdateAll = "Update All"
    override val browseOpenWebsite = "Open website"
    override val browseLocalBadge = "[Local]"
    override fun browseSourceId(id: String) = "ID: $id"
...
